# backup-rs

./: .gitignore  Cargo.toml  README.md
configs/: config-dev.yaml
src/: app_config.rs  dropbox.rs  lib.rs  main.rs
src/configuration/: dropbox_config.rs  folder.rs  mod.rs
tests/: test_compress.rs
